# ProtRankRL

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  train.py  train_local_gpu.sh
.github/workflows/: ci.yml
data/embeddings/: validated_proteins_esm_embeddings.csv  validated_proteins_esm_embeddings.npy
data/processed/: annotated_accessions.csv  state_cache.parquet  unified_protein_dataset.json  unified_protein_dataset_backup.csv
data/raw/: validated_proteins.csv
examples/: evaluate_enhanced_agent.py  experimental_data_demo.py  quickstart_demo.py  test_enhanced_env.py  train_enhanced_ppo_agent.py  train_ppo_agent.py
lambda_gpu/: run_all.sh  train_remote.py
logs/: evaluations.npz
protein_inputs/: README.md  SHRT_experimental_labels.csv
protein_inputs/embeddings/: SHRT_esm_embeddings.csv  SHRT_esm_embeddings.npy  validated_proteins_esm_embeddings.csv
protein_inputs/misc/: rcsb_pdb_2MLT.fasta
protein_inputs/processed/: annotated_accessions.csv  chembl_experimental_data.csv  chembl_experimental_data.json  realistic_synthetic_data.csv  realistic_synthetic_data.json  uniprot_bindingdb_data.csv  uniprot_bindingdb_data.json
protein_inputs/raw/: SHRT_experimental_labels.json  chembl_proteins.fasta  realistic_synthetic_proteins.fasta  test_proteins.fasta  uniprot_bindingdb_proteins.fasta  validated_proteins.fasta
scripts/: README.md  download_chembl_data.py  download_protein_sequences.py  download_uniprot_bindingdb_data.py  generate_esm_embeddings.py  generate_esm_embeddings_truncated.py  query_chembl_by_uniprot.py  run_full_pipeline.py
scripts/data_collection/: README.md  create_unified_dataset.py
scripts/synthetic/: README.md
scripts/validation/: README.md  validate_proteins.py
src/: __init__.py  config.py  state_builder.py  utils.py
src/agent/: buffer.py  (+4 more)
tests/: test_api.py  test_evaluator.py  test_protein_env.py  test_reward_shaper.py  test_sb3_algorithms.py  test_state_builder.py
training/: retrain_model.py
(+38 files in other folders)
